# Workbook_Agent

./: README.md
Notex/calux_book/: .env.example  pyproject.toml  requirements.txt
Notex/calux_book/calux_book/: __init__.py  agent.py  auth.py  cache.py  config.py  embedding.py  hardware.py  main.py  middleware.py  models.py  parser_router.py  prompts.py  providers.py  server.py  store.py  vector_store.py
Notex/calux_book/calux_book/frontend/: index.html
Notex/calux_book/calux_book/frontend/static/: app.js  style.css
Notex/calux_book/data/: license_audit.json
Notex/calux_book/data/lancedb/chunks.lance/_transactions/: 0-476d00e5-0e17-406f-9095-bcc12c2578f1.txn  (+134 more)
Notex/calux_book/data/uploads/guest_e2d91a85-5e4d-400f-8293-29540c37e171/: guest_610c12ca.txt
Notex/calux_book/data/uploads/guest_e6bb9986-f23f-4fac-87dd-d38f7c142059/: legacy-guest_62424bff.txt
Notex/calux_book/docs/: ARCHITECTURE_VISUAL_SUMMARY.md  CODEBASE_REPORT_DETAILED.md  INTERVIEW_QUICK_REFERENCE.md  README_INTERVIEW_PACKAGE.md  calux_book_software_engineering_interview.md  license_compliance.md
Notex/calux_book/logs/: audit.log.20260226  audit.log.20260227  audit.log.20260228  audit.log.20260301
Notex/calux_book/scripts/: audit_licenses.py
Notex/calux_book/tests/: conftest.py  test_api.py  test_auth.py  test_cache.py  test_config.py  test_hardware.py  test_models.py  test_providers.py  test_store.py  test_vector_store.py
Notex/calux_book/tests/__pycache__/: conftest.cpython-310-pytest-9.0.2.pyc.16572  conftest.cpython-310-pytest-9.0.2.pyc.34860  conftest.cpython-311-pytest-9.0.2.pyc.16524  conftest.cpython-311-pytest-9.0.2.pyc.33380  conftest.cpython-311-pytest-9.0.2.pyc.9304  conftest.cpython-313-pytest-9.0.2.pyc.27672
(+218 files in other folders)
