[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calux-book"
version = "1.0.0"
description = "Calux Book — Privacy-first AI-powered knowledge notebook"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Calux Book Team"}
]
keywords = ["ai", "notebook", "rag", "knowledge-base", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "google-genai>=1.5.0",
    # Parser Router
    "python-docx>=1.1.0",
    "python-calamine>=0.3.0",
    "rapidocr>=3.0.0",
    "pypdfium2>=4.0.0",
    "Pillow>=10.0.0",
    # Embedding & Vector Store
    "fastembed>=0.5.0",
    "lancedb>=0.17.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "tantivy>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "coverage>=7.0",
]

[project.scripts]
calux-book = "calux_book.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["calux_book*"]
